custom accounts - display login error message

--- a/accounts/accounts.css
+++ b/accounts/accounts.css
@@ -1,1 +1,9 @@
-/* CSS declarations go here */
+/*
+*******************************
+* Error
+*******************************
+*/
+
+#errorMessage {
+  color: red;
+}
